fixing small issue with text alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -231,10 +231,8 @@ html:not(.wf-doc) {
 }
 
 .tabsh-text {
-    max-width: 16ch;
-
     @media (max-width: 768px) {
-        max-width: 100%;
+        max-width: 16ch;
     }
 }
 
